# persistent-cdc

./: README.md  persistent-cdc.cabal  stack.yaml
src/Database/Persist/: CDC.hs
src/Database/Persist/CDC/: TH.hs
src/Database/Persist/CDC/Class/: PersistRecordCDC.hs  PersistStoreCDC.hs  PersistStoreCDCType.hs
src/Database/Persist/Class/: PersistStoreCDC.hs
test/: BasicTests.hs  CDCTests.hs  Init.hs  Model.hs  MultiModel.hs  MultiModelTests.hs  PersistTestPetType.hs  main.hs
