name:                persistent-cdc
version:             0.1.0.0
synopsis:            Change data capture for persistent.
description:         Please see README.md
homepage:            https://github.com/dfordivam/persistent-cdc#readme
license:             BSD3
license-file:        LICENSE
author:              Divam
maintainer:          dfordivam@gmail.com
copyright:           All rights reserved.
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.Persist.CDC
  other-modules:       Database.Persist.CDC.Class.PersistRecordCDC
                       Database.Persist.CDC.Class.PersistStoreCDC
  build-depends:       base >= 4.7 && < 5
                       , persistent
                       , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dfordivam/persistent-cdc
